--- a/app/src/main/res/layout/grid_image.xml
+++ b/app/src/main/res/layout/grid_image.xml
@@ -6,6 +6,5 @@
         android:id="@+id/icon"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/iggy" />
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
