--- a/app/src/main/res/layout/puzzle_grid.xml
+++ b/app/src/main/res/layout/puzzle_grid.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
- <GridView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    <GridView
         android:id="@+id/grid"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:numColumns="auto_fit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:columnWidth="90dp"
-        android:horizontalSpacing="10dp"
-        android:verticalSpacing="10dp"
-        android:gravity="center"
-        android:stretchMode="columnWidth">
-    </GridView>
+        android:gravity="center_vertical"
+        android:horizontalSpacing="1dp"
+        android:numColumns="3"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="1dp"/>
+</FrameLayout>
