--- a/app/src/main/res/layout/puzzle_list_layout.xml
+++ b/app/src/main/res/layout/puzzle_list_layout.xml
@@ -11,5 +11,15 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_gravity="left"
+        />
+    <TextView
+        android:id="@+id/textView_high_score"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_margin="20dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_gravity="right"
         />
 </LinearLayout>
